testcases/valid/substitution3.prove
[A] [[A]:sth] [B] [[B]:sth] [[x][y][[x]op[y]]=>[[]C]] => [[[[A]:sth]op[[B]:sth]] => [[]C]]
