testcases/invalid/substitution5.prove
[A] [[A]:st] [B] [[B]:sth] [[[x]op[y]]=>[[]C]] => [[[[A]:sth]op[[B]:sth]] => [[]C]]
